cmake_minimum_required(VERSION 3.10)
project(LibCurlWrapper VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE Release)

include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(${PROJECT_NAME} src/test.cpp)
add_executable(example_sync examples/example_sync.cpp)
add_executable(example_async examples/example_async.cpp)
add_executable(example_combined examples/example_combined.cpp)
target_link_libraries(${PROJECT_NAME} curl pthread)
target_link_libraries(example_sync curl pthread)
target_link_libraries(example_async curl pthread)
target_link_libraries(example_combined curl pthread)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
